Wed Jan 22 18:12:41 2003  Steve Huston  <shuston@riverace.com>

        * examples/C++NPv2/Service_Reporter.cpp:
        * examples/C++NPv2/Configurable_Logging_Server.cpp: Change the
          name of the static service descriptor from Reporter to
          Reporter_Descriptor. This is more descriptive and matches
          the book.

Wed Jan 22 18:08:27 UTC 2003  Craig Rodrigues  <crodrigu@bbn.com>

	* ace/config-freebsd.h: Add ACE_HAS_SNPRINTF.  Fixes Log_Msg_Test.

Wed Jan 22 18:03:35 UTC 2003  Craig Rodrigues  <crodrigu@bbn.com>

	* include/makeinclude/platform_linux.GNU:
	* include/makeinclude/platform_linux_icc.GNU:
	* include/makeinclude/platform_linux_kcc.GNU:
	  Remove defines of _POSIX_THREADS and _POSIX_THREAD_SAFE_FUNCTIONS.
	  These POSIX constants are not meant to be defined by
	  the user.  The user must include <unistd.h> and *check*
	  the value of these constants.  On Linux glibc systems,
	  after including <unistd.h>, the header <bits/posix_opt.h>
	  will be eventually be included...these constants are
	  defined by the glibc implementation in that header.

Wed Jan 22 10:55:39 2003  Steve Huston  <shuston@riverace.com>

        * ace/config-tru64.h: Added ACE_HAS_SNPRINTF. Thanks to Vladimir
          Chovanec <Vladimir.CHOVANEC@asset.sk> for this fix.

Wed Jan 22 01:24:51 2003  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/Message_Queue_T.h: Corrected the documentation for
          ACE_Message_Block_Ex so it says ACE_MESSAGE_TYPE rather than
          ACE_Message_Block.

Tue Jan 21 21:44:04 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ACEXML/examples/SAXPrint/broken.xml: Added a new broken XML file
	  to make sure we handle this case properly.

	* ACEXML/parser/parser/Parser.i (get): Added a check for
	  successful <get> operation from the input CharStream to avoid
	  out of the infinite loop when reading broken XML files.  Thanks
	  to Volodymyr Orlenko <vorlenko@jaalam.com> for reporting this
	  and submitting the patch.
