@@ -1,3 +1,8 @@
+Wed Jan 22 21:08:48 2003  Steve Huston  <shuston@riverace.com>
+
+        * examples/C++NPv2/WFMO_Reactor_Logging_Server.cpp (Quit_Handler):
+          Sync with code in the book.
+
 Wed Jan 22 18:12:41 2003  Steve Huston  <shuston@riverace.com>
 
         * examples/C++NPv2/Service_Reporter.cpp:
